--- a/aula12-ex/ex015/estilo.css
+++ b/aula12-ex/ex015/estilo.css
@@ -13,9 +13,16 @@ section{
   background-color: white;
   border-radius: 10px;
   padding: 5px;
-  width: 400px;
+  width: 500px;
   margin: auto;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.384);
+  padding: 15px;
+}
+
+img{
+  margin: 15px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.467);
 }
 
 footer{
